@@ -1,3 +1,10 @@
+2012-04-22  Jonathan Wakely  <jwakely.gcc@gmail.com>
+
+	PR libstdc++/53027
+	* include/bits/ptr_traits.h (pointer_traits::rebind): Make public.
+	* testsuite/20_util/pointer_traits/requirements/typedefs.cc: Check
+	rebind works.
+
 2012-04-21  Alan Modra  <amodra@gmail.com>
 
 	PR libstdc++/52839
